Fixes clipped FAQ expand button on mobile.

--- a/packages/react-app/src/assets/style.css
+++ b/packages/react-app/src/assets/style.css
@@ -426,6 +426,10 @@ button:disabled .circleQ svg {
     justify-content: space-between;
 }
 
+.card-header b {
+    max-width: 90%;
+}
+
 .card-header .faq-plus {
     background-image: url("icons/blue-plus.svg");
     height: 20px;
